crash-reporter (1.9.7-0) unstable; urgency=low

  * Fixes: NB#254618 - updated capabilities

 -- Raimo Gratseff <ext-raimo.gratseff@nokia.com>  Mon, 11 Jul 2011 16:27:32 +0300

crash-reporter (1.9.6-0) unstable; urgency=low

  * Fixes: NB#252147 - Crash-reporter-daemon keeps FS busy prohibiting usb mass storage mode
  * Fixes: NB#250474 - lifelog crashed during restore operation

 -- Raimo Gratseff <ext-raimo.gratseff@nokia.com>  Tue, 10 May 2011 13:56:54 +0300

crash-reporter (1.9.5-0) unstable; urgency=low

  * Fixes: NB#247120 - sh: ifconfig: not found after Init/done
  * Fixes: NB#239926 - ask user to describe the use case causing the crash
  * Fixes: NB#251419 - Crash monitoring stops permanently when USB mass storage mode is used

 -- Raimo Gratseff <ext-raimo.gratseff@nokia.com>  Mon, 02 May 2011 14:01:03 +0300

crash-reporter (1.9.4-0) unstable; urgency=low

  * Fixes: NB#247879 - Crash-reporter does not release /home/user/MyDocs/core-dumps directory

 -- Raimo Gratseff <ext-raimo.gratseff@nokia.com>  Thu, 21 Apr 2011 12:30:59 +0300

crash-reporter (1.9.3-0) unstable; urgency=low

  * Fixes: NB#238898 - Lifelog generation
  * Fixes: NB#233925 - mmcblk0p1 mounted on /home/user/MyDocs and /media/mmc2 at a time
  * Fixes: NB#242404 - Crash reporter does not update or remove its notifications
  * Fixes: NB#216483 - Save crash report comments without uploading immediately
  * Fixes: NB#243932 - 2nd row label should be removed from Crash reporter settings plugin

 -- Raimo Gratseff <ext-raimo.gratseff@nokia.com>  Mon, 11 Apr 2011 10:46:59 +0300

crash-reporter (1.9.2-0) unstable; urgency=low

  * Fixes: NB#235438 - Crash reporter title doesnt fit int portrait
  * Fixes: NB#235430 - "!! crash reporter " is not localized
  * Fixes: NB#237344 - "Maximum similar cores" setting to config file
  * Fixes: NB#216373 - Option to get information on Crash Reporter AutoUploader actions